@@ -1,3 +1,4 @@
+* Support field name on image tag
 * Use input number and toLocaleString for numeric fields
 * Show related record names for all windows
 * Allow to edit Many2One from tree view
